# jax-experiments

./: README.md  REFLECTION.md  cnn_mnist.py  count_cpu_devices.py  linear_regression.py  multi-controller-mesh.py  pmap.ipynb  pyproject.toml  relu.py  requirements.txt  run-multi-controller-mesh  shell.nix  xor.py
